# ChangeLog for net-im/gaim
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.9 2002/04/12 13:39:52 seemant Exp $

*gaim-0.56 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56.ebuild :

  Version bump.

*gaim-0.55 (29 Mar 2002)

  29 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.55.ebuild :

  Version bump.

*gaim-0.54 (28 Mar 2002)

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.54.ebuild :

  Version bump.

*gaim-0.53-r2 (8 Mar 2002)

  8 Mar 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.53-r2.ebuild :

  The gnome dep check for gdk-pixbuf was not correct apparently

*gaim-0.53-r1 (7 Mar 2002)

  7 Mar 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.53-r1.ebuild :

  Added needed media-libs/gdk-pixbuf dependency in an attempt to
  fix bug #934

*gaim-0.53 (2 Mar 2002)

  2 Mar 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.53.ebuild :

  Update to 0.53

*gaim-0.52-r1 (27 Feb 2002)

  27 Feb 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.52-r1.ebuild :

  gaim_applet correctly builds again... yanked gaim 0.52 ebuild

*gaim-0.52 (27 Feb 2002)

  27 Feb 2002; Bruce A. Locke <blocke@shivan.org> gaim-0.52.ebuild :

  Added Gaim 0.52 (simple copy of 0.51 ebuild)
  Authors: Joe Bormolini <lordjoe@bigfoot.com>, Bruce A. Locke <blocke@shivan.org>
