@@ -1,0 +1,1 @@
+MD5 fd7c5cbea0a862d0bcefbf16e4a27db1 gaim-0.56.tar.bz2 1317730
