@@ -1,6 +1,13 @@
 # ChangeLog for net-im/gaim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.9 2002/04/12 13:39:52 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/gaim/Attic/ChangeLog,v 1.10 2002/04/25 19:12:47 seemant Exp $
+
+*gaim-0.56-r1 (25 Apr 2002)
+
+  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gaim-0.56-r1.ebuild :
+
+  Changed arts dependency to kde3's arts package, and changed KDEDIR to point
+  to /usr/kde/3.  Thanks to naz in #gentoo for this.
 
 *gaim-0.56 (12 Apr 2002)
 
